# djangobs

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: security-isssue.md
src/djangobs/: apps.py
